Fix the deprecate code